--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "SEG3125 Module 1",
   "private": true,
+  "sideEffects": [
+    "*.scss",
+    "src/polyfills.ts"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode production",
@@ -15,9 +19,15 @@
   "author": "Daniel Tang (0300068985)",
   "license": "UNLICENSED",
   "dependencies": {
+    "@babel/core": "^7.10.2",
+    "@babel/plugin-transform-runtime": "^7.10.1",
+    "@babel/preset-env": "^7.10.2",
+    "@babel/runtime": "^7.10.2",
     "autoprefixer": "^9.8.0",
+    "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.0.1",
+    "core-js": "^3.6.5",
     "css-loader": "^3.5.3",
     "ejs-compiled-loader": "^3.0.0",
     "file-loader": "^6.0.0",
@@ -26,13 +36,26 @@
     "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
+    "regenerator-runtime": "^0.13.5",
     "sass-loader": "^8.0.2",
     "terser-webpack-plugin": "^3.0.2",
+    "ts-loader": "^7.0.5",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.3",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-copy-plugin": "0.0.4",
     "webpack-dev-server": "^3.11.0",
     "webpack-manifest-plugin": "^2.2.0",
     "webpack-merge": "^4.2.2"
+  },
+  "devDependencies": {
+    "@types/copy-webpack-plugin": "^6.0.0",
+    "@types/mini-css-extract-plugin": "^0.9.1",
+    "@types/optimize-css-assets-webpack-plugin": "^5.0.1",
+    "@types/terser-webpack-plugin": "^3.0.0",
+    "@types/webpack-dev-server": "^3.11.0",
+    "@types/webpack-manifest-plugin": "^2.1.0",
+    "@types/webpack-merge": "^4.1.5"
   }
 }
