--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "src/polyfills.ts"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "webpack --mode production",
     "buildDev": "webpack --mode development",
     "start": "webpack-dev-server --mode development --open",
@@ -51,11 +51,14 @@
   },
   "devDependencies": {
     "@types/copy-webpack-plugin": "^6.0.0",
+    "@types/jest": "^25.2.3",
     "@types/mini-css-extract-plugin": "^0.9.1",
     "@types/optimize-css-assets-webpack-plugin": "^5.0.1",
     "@types/terser-webpack-plugin": "^3.0.0",
     "@types/webpack-dev-server": "^3.11.0",
     "@types/webpack-manifest-plugin": "^2.1.0",
-    "@types/webpack-merge": "^4.1.5"
+    "@types/webpack-merge": "^4.1.5",
+    "jest": "^26.0.1",
+    "ts-jest": "^26.1.0"
   }
 }
