--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   ],
   "scripts": {
     "test": "jest",
+    "lint": "eslint .",
     "build": "webpack --mode production",
     "buildDev": "webpack --mode development",
     "start": "webpack-dev-server --mode development --open",
@@ -23,6 +24,8 @@
     "@babel/plugin-transform-runtime": "^7.10.1",
     "@babel/preset-env": "^7.10.2",
     "@babel/runtime": "^7.10.2",
+    "@typescript-eslint/eslint-plugin": "^3.0.2",
+    "@typescript-eslint/parser": "^3.0.2",
     "autoprefixer": "^9.8.0",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
@@ -30,6 +33,8 @@
     "core-js": "^3.6.5",
     "css-loader": "^3.5.3",
     "ejs-compiled-loader": "^3.0.0",
+    "eslint": "^7.1.0",
+    "eslint-loader": "^4.0.2",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
