--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -151,6 +151,8 @@
     }],
     "symbol-description": 2,
     "yield-star-spacing": 2,
+    "object-curly-spacing": [2, "always"],
+    "@typescript-eslint/no-var-requires": 0,
     "semi": [2, "always"]
   }
 }
